loopfor.LoopFor.scala.error
Compilation error:
LoopFor:12: error: not found: value poseBiscuits
poseBiscuits() 
^